# EnhancedBacktestEngine

./: CMakeLists.txt  backtest
app/: main.cpp
data/: bitcoin_data.csv
include/: BacktestEngine.h  Bar.h  CSVFeed.h  DoubleMovingAverageStrategy.h  Execution.h  Instrument.h  MarketDataFeed.h  MovingAverageStrategy.h  Order.h  Portfolio.h  Strategy.h  StrategyFactory.h
src/: BacktestEngine.cpp  CSVFeed.cpp  DoubleMovingAverageStrategy.cpp  EnhancedBacktestEngine.code-workspace  Execution.cpp  Instrument.cpp  MarketDataFeed.cpp  MovingAverageStrategy.cpp  Order.cpp  Portfolio.cpp  StrategyFactory.cpp  main.cpp
